[project]
name = "secret-roll-deck"
version = "0.1.0"
description = "Generate a fair-mix secret-roll lookup card deck for tabletop Pathfinder."
license = { text = "MIT" }
authors = [{ name = "Erv Walter", email = "erv@ewal.net" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.4",
]

[project.scripts]
secret-roll = "secret_roll.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secret_roll"]
